--- a/cocido/cocido.html
+++ b/cocido/cocido.html
@@ -79,6 +79,7 @@
             patatas y zanahorias y por último los embutidos y carnes. Todo unido en un mismo plato convierten el cocido madrileño en una receta deliciosa.
             En cuanto al acompañamiento, el cocido no requiere, ya que por sí solo, es un plato contundente y único. Con un poco de pan será suficiente para comerlo con mucho gusto.</li>
         </ol>
+        <button id="btn-ocultar">Ocultar instrucciones</button>
       </div>
       <div class="clearfix"></div>
     </section>
