--- a/ropa-vieja/ropa-vieja.html
+++ b/ropa-vieja/ropa-vieja.html
@@ -5,9 +5,7 @@
 </head>
 <link rel="stylesheet" type="text/css" href="css/main.css">
 
-
 <body>
-
 
 <header>
   <h1>Ropa vieja</h1>
@@ -58,24 +56,26 @@
 <section id="preparacion">
   <h2>Preparación</h2>
   <div class="text">
-  <ol>
-  <li>Partimos de las sobras de un cocido madrileño tradicional, o como os decía de cualquier otro puchero tradicional con garbanzos de vuestra zona. 
-    De esas sobras, vamos a utilizar sobre todo los garbanzos cocidos, los restos de las carnes y de las verduras -repollo, zanahoria y patata- que hayan quedado. 
-    Todo tiene que estar muy picado para que no haya trozos más grandes que los garbanzos. 
-    Incluso vamos a usar también un par de cucharones del caldo de cocido, para dar un toque más meloso al resultado final como os explicaré más tarde.</li>
-  <li>Comenzamos pochando una cebolla muy muy picada, dándole su tiempo hasta que quede bien dorada, como cuando hacemos cebolla caramelizada. 
-    Reservamos. Continuamos picando bien finitos dos dientes de ajo y los echamos en la sartén con dos cucharadas de aceite de oliva, dejando que se doren a fuego muy bajo. 
-    Cuando el ajo esté dorado retiramos la sartén del fuego y echamos una cucharada sopera de pimentón dándole vueltas para que se mezcle bien con el aceite y no se queme.</li>
-  <li>Incorporamos a la sartén los garbanzos, la verdura y la carne del cocido muy picada. 
-    Mezclamos bien y dejamos que el conjunto se cocine a fuego mínimo durante unos diez minutos, removiendo para que el aceite con el sofrito de ajo, 
-    cebolla y pimentón impregne todos los alimentos. El sabor de la ropa vieja dependerá sobre todo de lo que haya sobrado, si hay más o menos chorizo, tocino, morcillo, etc. </li>
-  <li>El toque final, dependerá de nuestros gustos. Hay quien prefiere dejar que los garbanzos se cocinen hasta quedar sequitos y crujientes y quien prefiere 
-    -como yo-, añadir uno o dos cucharones de caldo de cocido al final del proceso de elaboración, si queremos que la ropa vieja nos quede más melosa o untuosa. </li>
-  </ol> 
-</div>
-<div class="clearfix"></div>
+    <ol>
+      <li>Partimos de las sobras de un cocido madrileño tradicional, o como os decía de cualquier otro puchero tradicional con garbanzos de vuestra zona. 
+        De esas sobras, vamos a utilizar sobre todo los garbanzos cocidos, los restos de las carnes y de las verduras -repollo, zanahoria y patata- que hayan quedado. 
+        Todo tiene que estar muy picado para que no haya trozos más grandes que los garbanzos. 
+        Incluso vamos a usar también un par de cucharones del caldo de cocido, para dar un toque más meloso al resultado final como os explicaré más tarde.</li>
+      <li>Comenzamos pochando una cebolla muy muy picada, dándole su tiempo hasta que quede bien dorada, como cuando hacemos cebolla caramelizada. 
+        Reservamos. Continuamos picando bien finitos dos dientes de ajo y los echamos en la sartén con dos cucharadas de aceite de oliva, dejando que se doren a fuego muy bajo. 
+        Cuando el ajo esté dorado retiramos la sartén del fuego y echamos una cucharada sopera de pimentón dándole vueltas para que se mezcle bien con el aceite y no se queme.</li>
+      <li>Incorporamos a la sartén los garbanzos, la verdura y la carne del cocido muy picada. 
+        Mezclamos bien y dejamos que el conjunto se cocine a fuego mínimo durante unos diez minutos, removiendo para que el aceite con el sofrito de ajo, 
+        cebolla y pimentón impregne todos los alimentos. El sabor de la ropa vieja dependerá sobre todo de lo que haya sobrado, si hay más o menos chorizo, tocino, morcillo, etc. </li>
+      <li>El toque final, dependerá de nuestros gustos. Hay quien prefiere dejar que los garbanzos se cocinen hasta quedar sequitos y crujientes y quien prefiere 
+        -como yo-, añadir uno o dos cucharones de caldo de cocido al final del proceso de elaboración, si queremos que la ropa vieja nos quede más melosa o untuosa. </li>
+    </ol> 
+  </div>
+  <button id="btn-ocultar">Ocultar instrucciones</button>
+  <div class="clearfix"></div>
 </section>
 </div>
 
+  <script src="js/script.js"></script>
 </body>
 </html>
